Added working make_source() function, plus the capability to keep around new MEPs and sources without commiting them to the databases.

--- a/CEP/CPA/GSM/data/Makefile.am
+++ b/CEP/CPA/GSM/data/Makefile.am
@@ -13,4 +13,4 @@ gsmfiles := $(addprefix $(gsmtable)/,$(aipspp_tablefiles))
 #	  glish -l $(srcdir)/4c2gsm.g
 
 gsmdir = $(datadir)/GSM/$(gsmtable)
-gsm_DATA = $(gsmfiles)
+dist_gsm_DATA = $(gsmfiles)
