Rewrote test program to use CppUnit testing framework.

--- a/LCS/PL/test/Makefile.am
+++ b/LCS/PL/test/Makefile.am
@@ -1,18 +1,18 @@
-check_PROGRAMS = tPO # tSQLTimeStampCxxTest # tPL tSQLTimeStamp 
+check_PROGRAMS = \
+	tSQLTimeStamp 
+#	tSQLTimeStampCxxTest
 
-#tSQLTimeStamp_SOURCES = tSQLTimeStamp.cc
+tSQLTimeStamp_SOURCES = \
+	SQLTimeStampTest.cc \
+	SQLTimeStampTest.h \
+	tSQLTimeStamp.cc
 
-#tPL_SOURCES = tPL.cc \
-#              SQLTimeStampTest.h \
-#              SQLTimeStampTest.cc
+#tSQLTimeStampCxxTest_SOURCES = \
+#	SQLTimeStampCxxTest.hh \
+#	SQLTimeStampCxxTest.cc
 
-#tSQLTimeStampCxxTest_SOURCES = SQLTimeStampCxxTest.hh \
-#				SQLTimeStampCxxTest.cc
-#CXXFLAGS += -Wno-unused
-
-tPO_SOURCES = tPO.cc
+CXXFLAGS += -Wno-unused
 
 TESTS_ENVIRONMENT               = lofar_sharedir=$(lofar_sharedir)
-
 
 include $(lofar_sharedir)/Makefile.common
