--- a/CEP/CPA/GSM/test/Makefile.am
+++ b/CEP/CPA/GSM/test/Makefile.am
@@ -1,7 +1,8 @@
 
 TESTS_ENVIRONMENT		= lofar_sharedir=$(lofar_sharedir) srcdir=$(srcdir)
 
-TESTS = test_gsm.sh
+TESTS = 
+# test_gsm.sh
 
 EXTRA_DIST = test_gsm.sh test_gsm.run test_gsm.g test_gsm.out
 
