%[ER: 19]% Added ObjectId.cc

--- a/LCS/PL/src/Makefile.am
+++ b/LCS/PL/src/Makefile.am
@@ -6,6 +6,7 @@ DOCHDRS = Exception.h \
 
 lib_LTLIBRARIES = libpl.la
 
-libpl_la_SOURCES = $(DOCHDRS)
+libpl_la_SOURCES = $(DOCHDRS) \
+	  ObjectId.cc
 
 
