--- a/LCS/Common/configure.in
+++ b/LCS/Common/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_INIT(src/Debug.h)
+AC_INIT
 dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
@@ -51,6 +51,7 @@ dnl
 dnl Check for LOFAR specific things
 dnl
 lofar_DEBUG_OPTIMIZE
+lofar_CHECK_PRETTY_FUNCTION
 #lofar_QT
 lofar_QATOOLS
 lofar_DOCXX
