%[ER: 37]% Added child connection functionality to MEQ::Node. Added tForest test

--- a/CEP/CPA/PSS4/MEQ/test/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/test/Makefile.am
@@ -1,8 +1,8 @@
 #check_PROGRAMS 		= tPoly tMeqVells tMeqPolc tuvw
-check_PROGRAMS 		= tMeqVells tMeqPolc tMeqAdd
+check_PROGRAMS 		= tMeqVells tMeqPolc tMeqAdd tForest
 
 #TESTS			= tPoly tMeqVells tMeqPolc tuvw
-TESTS			= tMeqVells tMeqPolc tMeqAdd
+TESTS			= tMeqVells tMeqPolc tMeqAdd tForest
 
 #tPoly_SOURCES 		= tPoly.cc 
 #tPoly_LDADD		= ../src/libmeq.la 
@@ -19,6 +19,10 @@ tMeqPolc_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 tMeqAdd_SOURCES 	= tMeqAdd.cc 
 tMeqAdd_LDADD		= ../src/libmeq.la 
 tMeqAdd_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
+
+tForest_SOURCES 	= tForest.cc 
+tForest_LDADD		= ../src/libmeq.la 
+tForest_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 
 #tuvw_SOURCES 		= tuvw.cc 
 #tuvw_LDADD		= ../src/libmeq.la 
