--- a/trunk/CEP/CPA/AppAgent/MeqServer/configure.in
+++ b/trunk/CEP/CPA/AppAgent/MeqServer/configure.in
@@ -56,10 +56,11 @@ lofar_AIPSPP(1)
 lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(CEP/CPA/OCTOGlish)
+lofar_PACKAGE(CEP/CPA/VisCube)
+lofar_PACKAGE(CEP/CPA/MEQ)
 lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/AppUtils)
-lofar_PACKAGE(CEP/CPA/VisCube)
 dnl
 dnl Output Makefiles
 dnl
