--- a/trunk/CEP/CPA/AppAgent/Solver/configure.in
+++ b/trunk/CEP/CPA/AppAgent/Solver/configure.in
@@ -60,7 +60,7 @@ lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/AppUtils)
 lofar_PACKAGE(CEP/CPA/VisCube)
-lofar_PACKAGE(CEP/CPA/MNS)
+lofar_PACKAGE(CEP/CPA/PSS3/MNS)
 
 dnl
 dnl Output Makefiles
