--- a/trunk/CEP/CPA/PSS3/CAL/configure.in
+++ b/trunk/CEP/CPA/PSS3/CAL/configure.in
@@ -61,7 +61,7 @@ lofar_MPI(0)
 
 lofar_QATOOLS
 lofar_DOCXX
-lofar_PACKAGE(CEP/CPA/MNS)
+lofar_PACKAGE(CEP/CPA/PSS3/MNS)
 lofar_PACKAGE(LCS/Common)
 
 dnl
