%[ER: 19]% Added new header and source files

--- a/LCS/PL/src/Makefile.am
+++ b/LCS/PL/src/Makefile.am
@@ -1,13 +1,19 @@
-DOCHDRS = Exception.h \
+DOCHDRS = Collection.h \
+          ConnectionHandler.h \
+          Exception.h \
           ObjecId.h \
+          PersistenceBroker.h \
           PersistentObject.h \
+          Query.h \
           SQLTimeStamp.h \
-          TPersistentObject.h \
-          TPersistentObjectBase.h
+          TPersistentObjectBase.h \
+          TPersistentObject.h
 
 lib_LTLIBRARIES = libpl.la
 
 libpl_la_SOURCES = $(DOCHDRS) \
-	  ObjectId.cc
+	  ConnectionHandler.cc \
+	  ObjectId.cc \
+	  PersistenceBroker.cc
 
-
+include $(lofar_sharedir)/Makefile.common
