%[ER: 37]% Make use of new Node and Forest capabilities

--- a/CEP/CPA/PSS4/MEQ/test/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/test/Makefile.am
@@ -1,8 +1,8 @@
 #check_PROGRAMS 		= tPoly tMeqVells tMeqPolc tuvw
-check_PROGRAMS 		= tMeqVells tMeqPolc tMeqAdd tForest
+check_PROGRAMS 		= tMeqVells tMeqPolc tMeqAdd tForest tMeq
 
 #TESTS			= tPoly tMeqVells tMeqPolc tuvw
-TESTS			= tMeqVells tMeqPolc tMeqAdd tForest
+TESTS			= tMeqVells tMeqPolc tMeqAdd tForest tMeq
 
 #tPoly_SOURCES 		= tPoly.cc 
 #tPoly_LDADD		= ../src/libmeq.la 
@@ -23,6 +23,10 @@ tMeqAdd_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 tForest_SOURCES 	= tForest.cc 
 tForest_LDADD		= ../src/libmeq.la 
 tForest_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
+
+tMeq_SOURCES	 	= tMeq.cc 
+tMeq_LDADD		= ../src/libmeq.la 
+tMeq_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 
 #tuvw_SOURCES 		= tuvw.cc 
 #tuvw_LDADD		= ../src/libmeq.la 
