%[ER: 37]% Added various new Function classes

--- a/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -5,7 +5,8 @@ Domain.h					\
 Cells.h Polc.h \
 Node.h Function.h \
 Parm.h ParmPolc.h ParmPolcStored.h \
-Add.h Cos.h \
+Add.h Subtract.h Multiply.h Divide.h \
+Sin.h Cos.h Exp.h Sqr.h Sqrt.h Conj.h ToComplex.h \
 Vells.h VellsTmp.h VellsRep.h \
 VellsRealSca.h VellsRealArr.h \
 VellsComplexSca.h VellsComplexArr.h \
@@ -20,7 +21,8 @@ Domain.cc					\
 Cells.cc Polc.cc \
 Node.cc Function.cc \
 Parm.cc ParmPolc.cc ParmPolcStored.cc \
-Add.cc Cos.cc \
+Add.cc Subtract.cc Multiply.cc Divide.cc \
+Sin.cc Cos.cc Exp.cc Sqr.cc Sqrt.cc Conj.cc ToComplex.cc \
 Vells.cc VellsTmp.cc VellsRep.cc \
 VellsRealSca.cc VellsRealArr.cc \
 VellsComplexSca.cc VellsComplexArr.cc \
