--- a/CEP/CPA/PSS4/MEQ/test/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/test/Makefile.am
@@ -1,8 +1,8 @@
 #check_PROGRAMS 		= tPoly tMeqVells tMeqPolc tuvw
-check_PROGRAMS 		= tMeqVells tMeqPolc tMeqAdd tForest tMeq
+check_PROGRAMS 		= tMeqVells tMeqPolc tForest tMeq
 
 #TESTS			= tPoly tMeqVells tMeqPolc tuvw
-TESTS			= tMeqVells tMeqPolc tMeqAdd tForest tMeq
+TESTS			= tMeqVells tMeqPolc tForest tMeq
 
 #tPoly_SOURCES 		= tPoly.cc 
 #tPoly_LDADD		= ../src/libmeq.la 
@@ -15,10 +15,6 @@ tMeqVells_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 tMeqPolc_SOURCES 	= tMeqPolc.cc 
 tMeqPolc_LDADD		= ../src/libmeq.la 
 tMeqPolc_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
-
-tMeqAdd_SOURCES 	= tMeqAdd.cc 
-tMeqAdd_LDADD		= ../src/libmeq.la 
-tMeqAdd_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 
 tForest_SOURCES 	= tForest.cc 
 tForest_LDADD		= ../src/libmeq.la 
