--- a/trunk/LCS/PL/configure.in
+++ b/trunk/LCS/PL/configure.in
@@ -56,7 +56,9 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(LCS/Common)
 lofar_EXTERNAL(odbc,1,sql.h)
-lofar_EXTERNAL(cppunit,0,cppunit/Test.h,,$HOME/linux/usr/local/+pkg/+comp)
+lofar_EXTERNAL(boost,1,boost/shared_ptr.hpp,"",$HOME/linux/usr/local)
+lofar_EXTERNAL(dtl,1,dtl/DTL.h)
+#lofar_EXTERNAL(cppunit,0,cppunit/Test.h,,$HOME/linux/usr/local/+pkg/+comp)
 #lofar_EXTERNAL(cxxtest,0,cxxtest/SelfTest.h,"",$HOME/linux/usr/local)
 #lofar_EXTERNAL(loki,1,loki/LokiTypeInfo.h,"",$HOME/linux/usr/local)
 
