%[ER: 19]% Added a couple of test programs.

--- a/LCS/PL/test/Makefile.am
+++ b/LCS/PL/test/Makefile.am
@@ -1,18 +1,39 @@
-check_PROGRAMS = \
-	tSQLTimeStamp 
-#	tSQLTimeStampCxxTest
+check_PROGRAMS		= tCollection	\
+			  tTPO		\
+			  tObjectId 	\
+			  tSQLTimeStamp \
+			  SQLTimeStampCxxTest
 
-tSQLTimeStamp_SOURCES = \
-	SQLTimeStampTest.cc \
-	SQLTimeStampTest.h \
-	tSQLTimeStamp.cc
+tCollection_SOURCES	= tCollection.cc
+tCollection_LDADD	= ../src/libpl.la
+tCollection_DEPENDENCIES= ../src/libpl.la $(LOFAR_DEPEND)
 
-#tSQLTimeStampCxxTest_SOURCES = \
-#	SQLTimeStampCxxTest.hh \
-#	SQLTimeStampCxxTest.cc
+tTPO_SOURCES		= tTPO.cc
+tTPO_LDADD		= ../src/libpl.la
+tTPO_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
-CXXFLAGS += -Wno-unused
+#myClass_SOURCES		= myClass.cc \
+#			  MeqParm.cc
+#myClass_LDADD		= ../src/libpl.la
+#myClass_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
 
-TESTS_ENVIRONMENT               = lofar_sharedir=$(lofar_sharedir)
+
+tObjectId_SOURCES	= tObjectId.cc
+tObjectId_LDADD		= ../src/libpl.la
+tObjectId_DEPENDENCIES	= ../src/libpl.la $(LOFAR_DEPEND)
+
+tSQLTimeStamp_SOURCES   = SQLTimeStampTest.cc	\
+			  SQLTimeStampTest.h	\
+			  tSQLTimeStamp.cc
+
+SQLTimeStampCxxTest_SOURCES = \
+			  SQLTimeStampCxxTest.hh \
+			  SQLTimeStampCxxTest.cc
+
+CXXFLAGS += -Wno-unused-parameter
+
+TESTS_ENVIRONMENT	= lofar_sharedir=$(lofar_sharedir)
+
+TESTS 			= tSQLTimeStamp.sh
 
 include $(lofar_sharedir)/Makefile.common
