--- a/MAC/GCF/_CoreComps/TM/configure.in
+++ b/MAC/GCF/_CoreComps/TM/configure.in
@@ -56,11 +56,15 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_MPI(0)
 lofar_PACKAGE(LCS/Common)
+lofar_PACKAGE(MAC/Tools/LofarLogger)
+lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,log4cplus,)
+
                        
 dnl
 dnl Output Makefiles
 dnl
 AC_OUTPUT(
 src/Makefile
+test/Makefile
 Makefile
 )
