--- a/MAC/GCF/_CoreComps/PML/src/Makefile.am
+++ b/MAC/GCF/_CoreComps/PML/src/Makefile.am
@@ -1,3 +1,8 @@
+AUTOGEN = autogen
+SUFFIXES = .ph
+%.ph: %.prot
+	$(AUTOGEN) -L $(top_srcdir)/../../GCFCommon/autogen $<
+
 DOCHDRS	=	\
 	GPM_Controller.h \
 	GCF_SupTask.h \
@@ -17,19 +22,13 @@ libpml_la_SOURCES= $(DOCHDRS) \
 	GPM_PropertySet.cc \
 	GPM_PropertyProxy.cc \
 	GCF_PropertyProxy.cc \
-	GPM_Service.cc \
-	GPM_Defines.cc
-
-AUTOGEN = autogen
-SUFFIXES = .ph
-%.ph: %.prot
-	$(AUTOGEN) -L $(top_srcdir)/../../Common/autogen $<
+	GPM_Service.cc 
 
 BUILT_SOURCES = \
-	PropertyAgent.ph
+	PA_Protocol.ph
 
 EXTRA_DIST = \
-	PropertyAgent.ph
-	
+	PA_Protocol.ph
+
 include $(lofar_sharedir)/Makefile.common
 
