%[ER: 37]% Some last MEQ->Meq renamings

--- a/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -29,7 +29,7 @@ VellsComplexSca.cc VellsComplexArr.cc \
 Request.cc Result.cc \
 Forest.cc \
 ParmTable.cc \
-AID-MEQ-Registry.cc
+AID-Meq-Registry.cc
 
 #EXTRA_DIST		=			\
 #Beam.m						\
