--- a/CEP/CPA/AppAgent/MeqServer/configure.in
+++ b/CEP/CPA/AppAgent/MeqServer/configure.in
@@ -58,6 +58,7 @@ lofar_DOCXX
 lofar_PACKAGE(CEP/CPA/OCTOGlish)
 lofar_PACKAGE(CEP/CPA/VisCube)
 lofar_PACKAGE(CEP/CPA/PSS4/MEQ)
+lofar_PACKAGE(CEP/CPA/PSS4/MeqGen)
 lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/AppUtils)
