%[ER: 41]% First version

--- a/LCS/Math/src/Makefile.am
+++ b/LCS/Math/src/Makefile.am
@@ -1,10 +1,12 @@
 DOCHDRS	= \
-LCSMath.h 
+LCSMath.h \
+IComplex.h
 
 lib_LTLIBRARIES 	= libmath.la
 
 libmath_la_SOURCES 	= $(DOCHDRS) \
-LCSMath.cc 
+LCSMath.cc \
+IComplex.cc
 
 include $(lofar_sharedir)/Makefile.common
 
