%[ER: 37]% Added uvwparm

--- a/CEP/CPA/PSS4/MEQ/test/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/test/Makefile.am
@@ -1,8 +1,8 @@
 #check_PROGRAMS 		= tPoly tMeqVells tMeqPolc tuvw
-check_PROGRAMS 		= tMeqVells tMeqPolc tForest tMeq
+check_PROGRAMS 		= tMeqVells tMeqPolc tForest tMeq tBlob uvwparm
 
 #TESTS			= tPoly tMeqVells tMeqPolc tuvw
-TESTS			= tMeqVells tMeqPolc tForest tMeq
+TESTS			= tMeqVells tMeqPolc tForest tMeq tBlob
 
 #tPoly_SOURCES 		= tPoly.cc 
 #tPoly_LDADD		= ../src/libmeq.la 
@@ -23,6 +23,14 @@ tForest_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 tMeq_SOURCES	 	= tMeq.cc 
 tMeq_LDADD		= ../src/libmeq.la 
 tMeq_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
+
+tBlob_SOURCES	 	= tBlob.cc 
+tBlob_LDADD		= ../src/libmeq.la 
+tBlob_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
+
+uvwparm_SOURCES	 	= uvwparm.cc 
+uvwparm_LDADD		= ../src/libmeq.la 
+uvwparm_DEPENDENCIES	= ../src/libmeq.la $(LOFAR_DEPEND)
 
 #tuvw_SOURCES 		= tuvw.cc 
 #tuvw_LDADD		= ../src/libmeq.la 
