--- a/CEP/CPA/AppAgent/MSVisAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/MSVisAgent/src/Makefile.am
@@ -2,25 +2,14 @@ dmi_dir = $(lofar_sharedir)/../DMI
 
 lib_LTLIBRARIES = libmsvisagent.la
 
+DOCHDRS = MSInputSink.h MSOutputSink.h MSVisAgentVocabulary.h
+
 libmsvisagent_la_SOURCES = \
   MSInputSink.cc \
   MSOutputSink.cc \
   MSVisAgentDebugContext.cc \
   AID-MSVisAgent-Registry.cc
 
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/src
-
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
- 
-
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
 
