--- a/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -1,6 +1,9 @@
-dmi_dir = $(lofar_sharedir)/../DMI
-
 lib_LTLIBRARIES = libappagent.la
+
+DOCHDRS = \
+  AppEventAgentBase.h  BOIOSink.h      \
+  AppAgent.h         AppEventFlag.h       FileSink.h \
+  AppControlAgent.h  AppEventSink.h       
 
 libappagent_la_SOURCES = \
   AID-AppAgent-Registry.cc \
@@ -13,19 +16,6 @@ libappagent_la_SOURCES = \
   BOIOSink.cc 
   
 
-# script used to generate AID maps
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/src
-
-
-aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
- 
-
 include $(lofar_sharedir)/Makefile.common
+include $(lofar_sharedir)/Makefile.aids
 
