--- a/CEP/CPA/PSS4/MEQ/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/Makefile.am
@@ -1,18 +1,6 @@
 SUBDIRS=src test 
 
-# script used to generate AID maps
-dmi_dir = $(lofar_sharedir)/../DMI
-MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
-
-# All .aidlist files below this dir will be scanned
-BASELISTDIR = $(lofar_sharedir)/..
-
-# Your package's subdirectory
-AID_DIR = $(top_srcdir)/src
-
-
 aids:
-	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
-
+	(cd src && make aids)
 
 include $(lofar_sharedir)/Makefile.common
