%[ER: 42]% Rebuilt IDs

--- a/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -11,7 +11,7 @@ UVW.h \
 Vells.h VellsTmp.h VellsRep.h \
 VellsRealSca.h VellsRealArr.h \
 VellsComplexSca.h VellsComplexArr.h \
-Result.h \
+Result.h Request.h \
 Forest.h \
 ParmTable.h
 
